tests/expectations/compiler/group/no_space_between_literal.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370004]: Unexpected white space between terms (0,1) and group
    --> compiler-test:5:27
     |
   5 |       let g: group = (0,1) group;
     |                           ^"""]
